@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>401</width>
-    <height>276</height>
+    <width>490</width>
+    <height>340</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -20,50 +20,98 @@
     <number>6</number>
    </property>
    <item>
-    <layout class="QGridLayout" >
-     <property name="margin" >
-      <number>0</number>
+    <widget class="QGroupBox" name="groupBox_2" >
+     <property name="title" >
+      <string>Connection</string>
      </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
-        <string>Password</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" >
-      <widget class="QLineEdit" name="Username" />
-     </item>
-     <item row="0" column="1" >
-      <widget class="QLineEdit" name="Website" />
-     </item>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Website</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="label_2" >
-       <property name="text" >
-        <string>Username</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" >
-      <widget class="QLineEdit" name="Password" />
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="IncludeTracks" >
-     <property name="text" >
-      <string>Also download raw GPS tracks</string>
-     </property>
+     <layout class="QGridLayout" >
+      <property name="margin" >
+       <number>9</number>
+      </property>
+      <property name="spacing" >
+       <number>6</number>
+      </property>
+      <item row="2" column="1" >
+       <widget class="QLineEdit" name="Password" />
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
+         <string>Username</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
+         <string>Website</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="Website" />
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Password</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="Username" />
+      </item>
+      <item row="3" column="0" >
+       <widget class="QCheckBox" name="UseProxy" >
+        <property name="text" >
+         <string>Use proxy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" >
+       <layout class="QHBoxLayout" >
+        <property name="margin" >
+         <number>0</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item>
+         <widget class="QLineEdit" name="ProxyHost" >
+          <property name="enabled" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_4" >
+          <property name="enabled" >
+           <bool>false</bool>
+          </property>
+          <property name="text" >
+           <string>Port</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="ProxyPort" >
+          <property name="enabled" >
+           <bool>false</bool>
+          </property>
+          <property name="maximumSize" >
+           <size>
+            <width>100</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="inputMask" >
+           <string>99999; </string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -148,14 +196,21 @@
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="IncludeTracks" >
+     <property name="text" >
+      <string>Also download raw GPS tracks</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" >
       <size>
-       <width>383</width>
-       <height>20</height>
+       <width>435</width>
+       <height>16</height>
       </size>
      </property>
     </spacer>
@@ -181,8 +236,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>223</x>
-     <y>241</y>
+     <x>228</x>
+     <y>296</y>
     </hint>
     <hint type="destinationlabel" >
      <x>241</x>
@@ -197,8 +252,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>279</x>
-     <y>241</y>
+     <x>284</x>
+     <y>296</y>
     </hint>
     <hint type="destinationlabel" >
      <x>283</x>
@@ -213,12 +268,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>59</x>
-     <y>133</y>
+     <x>76</x>
+     <y>192</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>129</x>
-     <y>133</y>
+     <x>220</x>
+     <y>193</y>
     </hint>
    </hints>
   </connection>
@@ -229,12 +284,60 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>99</x>
-     <y>181</y>
+     <x>116</x>
+     <y>246</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>361</x>
-     <y>181</y>
+     <x>431</x>
+     <y>247</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>UseProxy</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ProxyHost</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>47</x>
+     <y>114</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>170</x>
+     <y>114</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>UseProxy</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ProxyPort</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>41</x>
+     <y>114</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>368</x>
+     <y>114</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>UseProxy</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label_4</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>49</x>
+     <y>102</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>320</x>
+     <y>102</y>
     </hint>
    </hints>
   </connection>
